<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    android:padding="16dp"
    tools:context=".ui.activities.LandingPageActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="392dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/good_review" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="40sp"
        android:textStyle="bold" />

    <!-- Slogan." -->
    <TextView
        android:id="@+id/sloganTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/slogan"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sloganTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/action_sign_in"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sloganTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:text="@string/action_sign_up"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/continueAsGuestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sloganTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:background="#00FFFFFF"
        android:text="@string/action_continue_as_guest"
        android:textAllCaps="true"
        android:textColor="@color/md_theme_light_secondary"
        android:textStyle="bold" />

</RelativeLayout>
