<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    tools:context=".ui.activities.WriteReviewActivity">


    <TextView
        android:id="@+id/textViewRateExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rate_your_experience"
        android:textColor="@color/md_theme_light_onBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewTitle" />

    <EditText
        android:id="@+id/editTextExperience"
        android:layout_width="320dp"
        android:layout_height="125dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/straight_edit_text_background"
        android:ems="10"
        android:hint="@string/prompt_experience"
        android:inputType="textMultiLine"
        android:minEms="70"
        android:minLines="2"
        android:paddingLeft="10dp"
        android:textColor="@color/md_theme_light_onBackground"
        android:textColorHint="@color/md_theme_light_secondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/characterCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_edit_note_24"
        android:drawableTint="@color/md_theme_light_secondary"
        android:text="@string/character_count_written_review"
        app:layout_constraintEnd_toEndOf="@+id/editTextExperience"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextExperience"
        app:layout_constraintTop_toBottomOf="@+id/editTextExperience" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/baseline_search_24"
        android:drawableTint="@color/md_theme_light_secondary"
        android:hint="@string/location_hint"
        android:textColor="@color/md_theme_light_onBackground"
        android:textColorHint="@color/md_theme_light_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextExperience" />

    <Spinner
        android:id="@+id/locationDropdown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteLocation" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/md_theme_light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:stepSize="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRateExperience" />

    <TextView
        android:id="@+id/reviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/written_review"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/writeReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_submit_review"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteLocation"
        app:layout_constraintVertical_bias="0.755" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:background="@color/md_theme_light_secondaryContainer"
        android:src="@drawable/food_critic_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
